[gd_scene load_steps=93 format=2]

[ext_resource path="res://scripts/scene2.gd" type="Script" id=1]
[ext_resource path="res://shaders/scene2/logic.shader" type="Shader" id=2]
[ext_resource path="res://scripts/scene2/logic.gd" type="Script" id=3]
[ext_resource path="res://shaders/scene2/force_collision.shader" type="Shader" id=4]
[ext_resource path="res://scripts/scene2/force.gd" type="Script" id=5]
[ext_resource path="res://shaders/scene2/particles_fbo_logic.shader" type="Shader" id=6]
[ext_resource path="res://textures/id_map.png" type="Texture" id=7]
[ext_resource path="res://textures/maze320x180.png" type="Texture" id=8]
[ext_resource path="res://scripts/scene2/particles_logic.gd" type="Script" id=9]
[ext_resource path="res://scripts/scene2/particles_wshadow.gd" type="Script" id=10]
[ext_resource path="res://shaders/scene2/particle_logic2.shader" type="Shader" id=11]
[ext_resource path="res://textures/ground/blocks/txarray.png" type="TextureArray" id=12]
[ext_resource path="res://textures/fb.png" type="TextureArray" id=13]
[ext_resource path="res://textures/monsters/anim_ghost.png" type="TextureArray" id=14]
[ext_resource path="res://textures/monsters/anim_ghost2.png" type="TextureArray" id=15]
[ext_resource path="res://textures/noise2.png" type="Texture" id=16]
[ext_resource path="res://textures/monsters/z.png" type="TextureArray" id=17]
[ext_resource path="res://shaders/scene2/particle_logic.shader" type="Shader" id=18]
[ext_resource path="res://scripts/scene2/screen_parts.gd" type="Script" id=19]
[ext_resource path="res://shaders/scene2/shadow.shader" type="Shader" id=20]
[ext_resource path="res://scripts/scene2/shadow.gd" type="Script" id=21]
[ext_resource path="res://scripts/scene2/fbo_self.gd" type="Script" id=22]
[ext_resource path="res://shaders/scene2/mainImage.shader" type="Shader" id=23]
[ext_resource path="res://textures/ground/g1.png" type="Texture" id=24]
[ext_resource path="res://textures/ground/g2.png" type="Texture" id=25]
[ext_resource path="res://textures/ground/q2a.png" type="Texture" id=26]
[ext_resource path="res://textures/ground/q2b.png" type="Texture" id=27]
[ext_resource path="res://textures/ground/q2c.png" type="Texture" id=28]
[ext_resource path="res://textures/ground/q2d.png" type="Texture" id=29]
[ext_resource path="res://textures/ground/g3.png" type="Texture" id=30]
[ext_resource path="res://textures/l2.webp" type="Texture" id=31]
[ext_resource path="res://textures/w2.webp" type="Texture" id=32]
[ext_resource path="res://scripts/scene2/mainImage.gd" type="Script" id=33]
[ext_resource path="res://shaders/scene2/player.shader" type="Shader" id=34]
[ext_resource path="res://textures/legend of faune files/walk-side/walk.png" type="Texture" id=35]
[ext_resource path="res://textures/legend of faune files/walk-up/walk.png" type="Texture" id=36]
[ext_resource path="res://textures/legend of faune files/walk-down/walk.png" type="Texture" id=37]
[ext_resource path="res://textures/legend of faune files/run-side/run.png" type="Texture" id=38]
[ext_resource path="res://textures/legend of faune files/run-up/run.png" type="Texture" id=39]
[ext_resource path="res://textures/legend of faune files/run-down/run.png" type="Texture" id=40]
[ext_resource path="res://scripts/scene2/player.gd" type="Script" id=41]
[ext_resource path="res://shaders/scene2/endgame.shader" type="Shader" id=42]
[ext_resource path="res://textures/Full_Moon_background.jpg" type="Texture" id=43]
[ext_resource path="res://textures/font.png" type="Texture" id=44]
[ext_resource path="res://scripts/scene2/eng_game.gd" type="Script" id=45]
[ext_resource path="res://scripts/scene2/Control.gd" type="Script" id=46]
[ext_resource path="res://font/kenpixel/kenpixel_square.ttf" type="DynamicFontData" id=47]
[ext_resource path="res://font/fantasque-sans-mono/font.tres" type="DynamicFont" id=48]
[ext_resource path="res://shaders/scene2/gbbutton.shader" type="Shader" id=49]
[ext_resource path="res://textures/gbcemoticons_batch01.png" type="Texture" id=50]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/iTime = null
shader_param/delta = null
shader_param/temp_mov_timer = null
shader_param/iFrame = null
shader_param/anim_state1 = -1
shader_param/anim_state2 = -1
shader_param/add_speed = null
shader_param/iMouse = Vector3( 1, 1, 0 )

[sub_resource type="ImageTexture" id=2]
size = Vector2( 10, 2 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 4
light_mode = 1

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("logic")

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("logic")

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/iTime = null
shader_param/iFrame = null
shader_param/zoom = 1.0
shader_param/mousedr = null
shader_param/iMouse = null
shader_param/logic = SubResource( 5 )

[sub_resource type="ImageTexture" id=7]
size = Vector2( 1280, 720 )

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("force_collision_map")

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("logic")

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/iTime = null
shader_param/iFrame = null
shader_param/scale_v = 1.0
shader_param/clean_scr = null
shader_param/clean_scr5 = null
shader_param/clean_scr10 = null
shader_param/mousedl = null
shader_param/scr_posx = null
shader_param/scr_posy = null
shader_param/speed_x = 1.0
shader_param/last_index = null
shader_param/spawn1 = null
shader_param/spawn2 = null
shader_param/gravity = Vector2( 0, 0 )
shader_param/spwan_b_once = null
shader_param/anim_state = null
shader_param/iMouse = null
shader_param/maze_map = ExtResource( 8 )
shader_param/color_map = ExtResource( 7 )
shader_param/force_collision = SubResource( 8 )
shader_param/logic = SubResource( 9 )

[sub_resource type="ImageTexture" id=11]
size = Vector2( 1280, 720 )

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 4
light_mode = 1

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("particles")

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("logic")

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("particles")

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/iTime = null
shader_param/iFrame = null
shader_param/zoom = 0.0
shader_param/real_resolution = 1.0
shader_param/iMouse = Vector3( 1, 1, 0 )
shader_param/iChannel3 = ExtResource( 16 )
shader_param/particles = SubResource( 15 )
shader_param/logic = SubResource( 14 )
shader_param/blocks = ExtResource( 12 )
shader_param/zombi = ExtResource( 17 )
shader_param/fball = ExtResource( 13 )
shader_param/ghost = ExtResource( 14 )
shader_param/ghost2 = ExtResource( 15 )

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("logic")

[sub_resource type="ShaderMaterial" id=18]
resource_local_to_scene = true
shader = ExtResource( 18 )
shader_param/zoom = 1.0
shader_param/logic = SubResource( 17 )

[sub_resource type="ImageTexture" id=19]
size = Vector2( 256, 256 )

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("particles_wshadow")

[sub_resource type="ShaderMaterial" id=21]
resource_local_to_scene = true
shader = ExtResource( 20 )
shader_param/iTime = null
shader_param/iFrame = null
shader_param/zoom = null
shader_param/col_o1 = Color( 1, 0.684593, 0.03125, 1 )
shader_param/iMouse = null
shader_param/iChannel0 = SubResource( 20 )

[sub_resource type="ImageTexture" id=22]
size = Vector2( 1280, 2 )

[sub_resource type="ViewportTexture" id=23]
viewport_path = NodePath("logic")

[sub_resource type="ViewportTexture" id=24]
viewport_path = NodePath("shadow")

[sub_resource type="ViewportTexture" id=25]
viewport_path = NodePath("particles_wshadow")

[sub_resource type="ShaderMaterial" id=26]
resource_local_to_scene = true
shader = ExtResource( 23 )
shader_param/iTime = 0.0
shader_param/txgrad = 1.0
shader_param/iFrame = null
shader_param/pa_once = null
shader_param/screen_pos = Vector2( 0, 0 )
shader_param/zoom = 1.0
shader_param/mousedr = 1.0
shader_param/iMouse = Vector3( 1, 1, 0 )
shader_param/iChannel0 = SubResource( 23 )
shader_param/iChannel1 = SubResource( 24 )
shader_param/iChannel2 = SubResource( 25 )
shader_param/maze_map = ExtResource( 8 )
shader_param/ground1 = ExtResource( 24 )
shader_param/ground2 = ExtResource( 25 )
shader_param/ground2a = ExtResource( 26 )
shader_param/ground2b = ExtResource( 27 )
shader_param/ground2c = ExtResource( 28 )
shader_param/ground2d = ExtResource( 29 )
shader_param/ground3 = ExtResource( 30 )
shader_param/wla = ExtResource( 31 )
shader_param/wlb = ExtResource( 32 )

[sub_resource type="ImageTexture" id=27]
size = Vector2( 1280, 720 )

[sub_resource type="ViewportTexture" id=28]
viewport_path = NodePath("logic")

[sub_resource type="ShaderMaterial" id=29]
resource_local_to_scene = true
shader = ExtResource( 34 )
shader_param/iTime = 0.0
shader_param/rTime = null
shader_param/iFrame = null
shader_param/anim_state = 0
shader_param/zoom = 1.0
shader_param/iMouse = null
shader_param/iChannel0 = ExtResource( 35 )
shader_param/iChannel1 = ExtResource( 36 )
shader_param/iChannel2 = ExtResource( 37 )
shader_param/iChannel3 = ExtResource( 38 )
shader_param/iChannel4 = ExtResource( 39 )
shader_param/iChannel5 = ExtResource( 40 )
shader_param/logic = SubResource( 28 )

[sub_resource type="ImageTexture" id=30]
size = Vector2( 270, 330 )

[sub_resource type="ViewportTexture" id=31]
viewport_path = NodePath("logic")

[sub_resource type="ShaderMaterial" id=32]
resource_local_to_scene = true
shader = ExtResource( 42 )
shader_param/iTime = 1.0
shader_param/iFrame = null
shader_param/iMouse = null
shader_param/iChannel0 = ExtResource( 43 )
shader_param/iChannel3 = ExtResource( 44 )
shader_param/logic = SubResource( 31 )

[sub_resource type="ImageTexture" id=33]
size = Vector2( 1280, 720 )

[sub_resource type="DynamicFont" id=39]
size = 45
font_data = ExtResource( 47 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.309804, 0.352941, 0.490196, 0.545098 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.780392, 0.25098, 0.25098, 0.545098 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.309804, 0.352941, 0.490196, 0.545098 )

[sub_resource type="StyleBoxFlat" id=37]

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.309804, 0.352941, 0.490196, 0.239216 )

[sub_resource type="DynamicFont" id=40]
size = 60
font_data = ExtResource( 47 )

[sub_resource type="ShaderMaterial" id=41]
shader = ExtResource( 49 )
shader_param/iTime = 0.0
shader_param/iFrame = null
shader_param/index = 3
shader_param/scale = 3.0
shader_param/iMouse = Vector3( 1, 0, 0 )
shader_param/iChannel0 = ExtResource( 50 )

[sub_resource type="ImageTexture" id=42]
size = Vector2( 240, 240 )

[node name="scene" type="Node2D"]
script = ExtResource( 1 )

[node name="logic" type="Viewport" parent="."]
size = Vector2( 10, 2 )
transparent_bg = true
use_32_bpc_depth = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="logic"]
material = SubResource( 1 )
texture = SubResource( 2 )
centered = false
script = ExtResource( 3 )

[node name="logic_buf" type="Viewport" parent="."]
size = Vector2( 10, 2 )
transparent_bg = true
use_32_bpc_depth = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="logic_buf"]
material = SubResource( 3 )
texture = SubResource( 4 )
centered = false

[node name="force_collision_map" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
use_32_bpc_depth = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="force_collision_map"]
material = SubResource( 6 )
texture = SubResource( 7 )
centered = false
script = ExtResource( 5 )

[node name="particles" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
use_32_bpc_depth = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="particles"]
material = SubResource( 10 )
texture = SubResource( 11 )
centered = false
script = ExtResource( 9 )

[node name="particles_buf" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
use_32_bpc_depth = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="particles_buf"]
material = SubResource( 12 )
texture = SubResource( 13 )
centered = false

[node name="particles_wshadow" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3
script = ExtResource( 10 )

[node name="screen_parts" type="Particles2D" parent="particles_wshadow"]
material = SubResource( 16 )
emitting = false
amount = 1
explosiveness = 1.0
visibility_rect = Rect2( -100, -100, 1280, 720 )
process_material = SubResource( 18 )
texture = SubResource( 19 )
script = ExtResource( 19 )

[node name="shadow" type="Viewport" parent="."]
size = Vector2( 1280, 2 )
transparent_bg = true
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="shadow"]
material = SubResource( 21 )
texture = SubResource( 22 )
centered = false
script = ExtResource( 21 )

[node name="fbo_self" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="mainImage" type="Sprite" parent="."]
material = SubResource( 26 )
texture = SubResource( 27 )
centered = false
script = ExtResource( 33 )

[node name="player" type="Sprite" parent="."]
material = SubResource( 29 )
position = Vector2( 640, 360 )
texture = SubResource( 30 )
script = ExtResource( 41 )

[node name="endgame" type="Node2D" parent="."]
visible = false

[node name="end_game" type="Sprite" parent="endgame"]
material = SubResource( 32 )
texture = SubResource( 33 )
centered = false
script = ExtResource( 45 )

[node name="Control" type="Control" parent="endgame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 46 )

[node name="restart" type="Button" parent="endgame/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 50.0
margin_right = 118.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 39 )
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 36 )
custom_styles/disabled = SubResource( 37 )
custom_styles/normal = SubResource( 38 )
text = "Restart"

[node name="back" type="Button" parent="endgame/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 148.219
margin_right = 118.0
margin_bottom = 217.219
custom_fonts/font = SubResource( 39 )
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 36 )
custom_styles/disabled = SubResource( 37 )
custom_styles/normal = SubResource( 38 )
text = "back"

[node name="Label" type="Label" parent="endgame/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -193.634
margin_top = 241.888
margin_right = 196.366
margin_bottom = 331.888
custom_fonts/font = SubResource( 40 )
text = "restart ?"

[node name="Label2" type="Label" parent="endgame/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 299.441
margin_top = 646.32
margin_right = 748.441
margin_bottom = 736.32
custom_colors/font_color = Color( 0.694118, 0.694118, 0.694118, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 48 )
text = "Twitter: 
https://twitter.com/AruGL"

[node name="gbb" type="TextureButton" parent="endgame/Control"]
material = SubResource( 41 )
margin_left = 793.714
margin_top = -5.67303
margin_right = 1033.71
margin_bottom = 234.327
texture_normal = SubResource( 42 )

[connection signal="pressed" from="endgame/Control/restart" to="endgame/Control" method="_on_restart_pressed"]
[connection signal="pressed" from="endgame/Control/back" to="endgame/Control" method="_on_back_pressed"]
[connection signal="pressed" from="endgame/Control/gbb" to="endgame/Control" method="_on_gbb_pressed"]
